fix there is no spacing between icon and title in visitor log actions

--- a/plugins/Live/stylesheets/live.less
+++ b/plugins/Live/stylesheets/live.less
@@ -251,6 +251,7 @@ a.visitor-log-visitor-profile-link {
 
 .action-list-action-icon {
     float:left;
+    margin-right:4px;
 
     &.event {
       margin-top: 0;
